# jpeg_webcam_streamer

./: .gitignore  CMakeLists.txt  JpegFrameParser.cpp  JpegFrameParser.hh  Makefile  README.md  WebcamJPEGDeviceSource.cpp  WebcamJPEGDeviceSource.hh  WebcamStreamer.cpp  configure.ac
cmake/Modules/: FindLive555.cmake
src/: CMakeLists.txt  JpegFrameParser.cpp  JpegFrameParser.hh  Makefile.am  WebcamJPEGDeviceSource.cpp  WebcamJPEGDeviceSource.hh  WebcamStreamer.cpp
